@@ -2,6 +2,8 @@ use strict;
 use warnings FATAL => 'all';
 
 use Test::More;
+plan skip_all => 'skipping for regular installs, due to possible circular dependency issues'
+    unless $ENV{AUTHOR_TESTING} || $ENV{AUTOMATED_TESTING};
 
 # blech! but Test::Requires does a stringy eval, so this works...
 use Test::Requires { 'Moose' => '()', 'MooseX::Role::Parameterized' => '()' };
